<resources>
    <string name="app_name">MyLNList</string>
    <string name="search">Search</string>
    <string name="novel_title">NOVEL TITLE</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="history">History</string>
    <string name="title">Title</string>
    <string name="sign_out">Sign Out</string>
    <string name="labelName">Name:</string>
    <string name="stringName">Full Name</string>
    <string name="labelEmail">Email:</string>
    <string name="fetching_email">fetching email…</string>
    <string name="labelUsername">Username:</string>
    <string name="edit_username">Edit Username</string>
    <string name="description">Description</string>
    <string name="please_sign_in_first">Please Sign In First</string>
    <string name="add_to_my_history">Add to my history</string>
    <string name="this_ln_is_not_on_your_list">This LN is not on your list</string>
    <string name="this_is_the_description">This is the Description</string>
    <string name="please_sign_in_to_view_your_history">Please Sign In To View Your History</string>
    <string name="history_available">History Available</string>
    <string name="volumeLabel">Volume:</string>
    <string name="chapterLabel">Chapter:</string>
    <string name="_0">0</string>
    <string name="score">Score:</string>
</resources>