<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Profile">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/stringName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/stringName"
        app:layout_constraintBottom_toBottomOf="@+id/labelName"
        app:layout_constraintStart_toEndOf="@+id/labelName"
        app:layout_constraintTop_toTopOf="@+id/labelName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/labelEmail"
        app:layout_constraintStart_toStartOf="@+id/labelName"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <TextView
        android:id="@+id/stringEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetching_email"
        app:layout_constraintBottom_toBottomOf="@+id/labelEmail"
        app:layout_constraintStart_toStartOf="@+id/stringName"
        app:layout_constraintTop_toTopOf="@+id/labelEmail" />


    <TextView
        android:id="@+id/labelUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/labelUsername"
        app:layout_constraintStart_toStartOf="@+id/labelEmail"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/stringUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fetching username"
        app:layout_constraintBottom_toBottomOf="@+id/labelUsername"
        app:layout_constraintStart_toStartOf="@+id/stringEmail"
        app:layout_constraintTop_toTopOf="@+id/labelUsername" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditUsernameButton"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/EditUsernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/edit_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stringUsername" />


</androidx.constraintlayout.widget.ConstraintLayout>