<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovelDetailFragment.NovelHistory">


    <TextView
        android:id="@+id/tvNovelHistoryVolumeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volumeLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />


    <TextView
        android:id="@+id/tvNovelHistoryChapterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/chapterLabel"
        app:layout_constraintEnd_toEndOf="@+id/tvNovelHistoryVolumeLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNovelHistoryVolumeLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvNovelHistoryVolumeLabel" />

    <TextView
        android:id="@+id/tvNovelHistoryScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="@+id/tvNovelHistoryChapterLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNovelHistoryChapterLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvNovelHistoryChapterLabel" />


    <EditText
        android:id="@+id/editTextVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:autofillHints=""
        android:ems="2"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvNovelHistoryVolumeLabel"
        app:layout_constraintStart_toEndOf="@+id/tvNovelHistoryVolumeLabel"
        app:layout_constraintTop_toTopOf="@+id/tvNovelHistoryVolumeLabel"
        app:layout_constraintVertical_bias="0.769"
        tools:ignore="LabelFor"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/editTextChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="2"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextVolume"
        app:layout_constraintStart_toStartOf="@+id/editTextVolume"
        app:layout_constraintTop_toBottomOf="@+id/editTextVolume"
        tools:ignore="LabelFor"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/editTextScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="2"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextChapter"
        app:layout_constraintStart_toStartOf="@+id/editTextChapter"
        app:layout_constraintTop_toBottomOf="@+id/editTextChapter"
        tools:ignore="LabelFor"
        android:imeOptions="actionDone"/>

</androidx.constraintlayout.widget.ConstraintLayout>